--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-EGGG.web
-<h2>github logo thing that it made me add:</h2><img src="https://github.com/images/mona-whisper.gif">
-<h1>hello :3</h1>
-
+eggg
